fix-overflow-x

--- a/assets/css/partials/_reboot.scss
+++ b/assets/css/partials/_reboot.scss
@@ -24,6 +24,7 @@ body {
   bottom right;
   position: relative;
   z-index: 0;
+  overflow-x: hidden;
 }
 
 * {
